# app/serializers/repairer_serializer.rb
@@ -1,4 +1,8 @@
 class RepairerSerializer < ActiveModel::Serializer
-  attributes :id, :email_address, :hourly_rate, :service_radius, :created_at, :updated_at
+  attributes :id, :name, :email_address, :hourly_rate, :service_radius, :latitude, :longitude, :created_at, :updated_at
   has_many :services
+
+  def hourly_rate
+    object.hourly_rate.to_f
+  end
 end
