# app/serializers/user_serializer.rb
@@ -1,0 +1,4 @@
+class UserSerializer < ActiveModel::Serializer
+  attributes :id, :name, :email_address, :address, :latitude, :longitude, :created_at, :updated_at
+  # Exclude sensitive fields like password_digest, tokens, etc.
+end
