# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_04_12_144615) do
+ActiveRecord::Schema[8.0].define(version: 2025_04_13_145817) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -66,6 +66,9 @@ ActiveRecord::Schema[8.0].define(version: 2025_04_12_144615) do
     t.string "name", null: false
     t.string "email_address", null: false
     t.string "password_digest", null: false
+    t.float "latitude"
+    t.float "longitude"
+    t.string "address", default: ""
     t.index ["email_address"], name: "index_repairers_on_email_address", unique: true
   end
 
@@ -97,6 +100,9 @@ ActiveRecord::Schema[8.0].define(version: 2025_04_12_144615) do
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.string "name", null: false
+    t.float "latitude"
+    t.float "longitude"
+    t.string "address", default: ""
     t.index ["email_address"], name: "index_users_on_email_address", unique: true
   end
 
